--- a/css/base.css
+++ b/css/base.css
@@ -65,7 +65,7 @@
     --gradient-text-1: #09314c;
     --gradient-text-2: rgb(242 133 93);
     --cursor-blend-mode: none;
-    background-image: url(../img/bg5.jpg);
+    background-image: url(../img/bg7-tokenomics.jpg);
 }
 
 .demo-6 {
@@ -372,6 +372,13 @@ a.frame__demos-item {
 		--gradient-text-2: rgb(48, 48, 48);
 		background-image: url(../img/bg7-mob.jpg);
 		backround-size:cover;
+	}
+	.demo-5 {
+		--cursor-bg: #ea5b2acc;
+    --gradient-text-1: #09314c;
+    --gradient-text-2: rgb(242 133 93);
+    --cursor-blend-mode: none;
+    background-image: url(../img/bg7-tokenomics-mob.jpg);
 	}
 	
 }
